footer-copyright-align-fix

--- a/src/components/App/assets/responsive.css
+++ b/src/components/App/assets/responsive.css
@@ -254,6 +254,7 @@
     }
     .footer .copyright {
         margin: 0 0 15px;
+        text-align: center !important;
     }
     .scrolltop {
         bottom: 100px;
