--- a/src/components/App/assets/style.css
+++ b/src/components/App/assets/style.css
@@ -346,6 +346,10 @@ text-align: right;
 .social-icons-footer{
     /* text-align: center !important; */
     display: flex;
+    justify-content: center;
+}
+.footer .copyright{
+    text-align: right;
 }
 .social-icons ul li a {
     background-color: #eae3e3;
